--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "jud-html5",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "jud html5",
   "main": "dist/jud.common.js",
   "scripts": {
-    "test": "npm run e2e-tests && npm run objc-tests && npm run unit-tests",
-    "posttest": "npm run jshint",
     "cover": "istanbul cover node_modules/jasmine-node/bin/jasmine-node -- tests/spec/unit",
     "e2e-tests": "jasmine-node --captureExceptions --color tests/spec",
+    "jshint": "jshint bin tests",
     "objc-tests": "xcodebuild test -workspace tests/cordova-ios.xcworkspace -scheme CordovaLibTests -destination \"platform=iOS Simulator,name=iPhone 5\" CONFIGURATION_BUILD_DIR=\"`mktemp -d 2>/dev/null || mktemp -d -t 'cordova-ios'`\"",
+    "posttest": "npm run jshint",
     "preobjc-tests": "tests/scripts/killsim.js",
-    "unit-tests": "jasmine-node --captureExceptions --color tests/spec/unit",
-    "jshint": "jshint bin tests"
+    "test": "npm run e2e-tests && npm run objc-tests && npm run unit-tests",
+    "unit-tests": "jasmine-node --captureExceptions --color tests/spec/unit"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,24 @@
   "bugs": {
     "url": "https://github.com/vkiding/jud-html5/issues"
   },
-  "homepage": "https://github.com/vkiding/jud-html5#readme",
+    "bundleDependencies": [
+    "cordova-common",
+    "ios-sim",
+    "nopt",
+    "plist",
+    "q",
+    "shelljs",
+    "xcode"
+  ],
+  "dependencies": {
+    "cordova-common": "^1.5.0",
+    "ios-sim": "^5.0.12",
+    "nopt": "^3.0.6",
+    "plist": "^1.2.0",
+    "q": "^1.4.1",
+    "shelljs": "^0.5.3",
+    "xcode": "^0.8.5"
+  },
   "devDependencies": {
     "coffee-script": "^1.7.1",
     "istanbul": "^0.4.2",
@@ -36,22 +53,5 @@
     "tmp": "^0.0.26",
     "uncrustify": "^0.6.1"
   },
-  "dependencies": {
-    "cordova-common": "^1.5.0",
-    "ios-sim": "^5.0.12",
-    "nopt": "^3.0.6",
-    "plist": "^1.2.0",
-    "q": "^1.4.1",
-    "shelljs": "^0.5.3",
-    "xcode": "^0.8.5"
-  },
-  "bundledDependencies": [
-    "cordova-common",
-    "ios-sim",
-    "nopt",
-    "plist",
-    "q",
-    "shelljs",
-    "xcode"
-  ]
+  "homepage": "https://github.com/vkiding/jud-html5#readme"
 }
