--- a/package.json
+++ b/package.json
@@ -1,18 +1,8 @@
 {
   "name": "jud-html5",
-  "version": "0.0.3",
-  "description": "jud html5",
+  "version": "0.0.4",
+  "description": "Jud HTML5",
   "main": "dist/jud.common.js",
-  "scripts": {
-    "cover": "istanbul cover node_modules/jasmine-node/bin/jasmine-node -- tests/spec/unit",
-    "e2e-tests": "jasmine-node --captureExceptions --color tests/spec",
-    "jshint": "jshint bin tests",
-    "objc-tests": "xcodebuild test -workspace tests/cordova-ios.xcworkspace -scheme CordovaLibTests -destination \"platform=iOS Simulator,name=iPhone 5\" CONFIGURATION_BUILD_DIR=\"`mktemp -d 2>/dev/null || mktemp -d -t 'cordova-ios'`\"",
-    "posttest": "npm run jshint",
-    "preobjc-tests": "tests/scripts/killsim.js",
-    "test": "npm run e2e-tests && npm run objc-tests && npm run unit-tests",
-    "unit-tests": "jasmine-node --captureExceptions --color tests/spec/unit"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vkiding/jud-html5.git"
@@ -20,38 +10,12 @@
   "keywords": [
     "jud"
   ],
-  "author": "vkiding",
+  "author": {
+    "author": "vkiding",
+  },
   "license": "GPL-3.0",
+  "homepage": "",
   "bugs": {
     "url": "https://github.com/vkiding/jud-html5/issues"
-  },
-    "bundleDependencies": [
-    "cordova-common",
-    "ios-sim",
-    "nopt",
-    "plist",
-    "q",
-    "shelljs",
-    "xcode"
-  ],
-  "dependencies": {
-    "cordova-common": "^1.5.0",
-    "ios-sim": "^5.0.12",
-    "nopt": "^3.0.6",
-    "plist": "^1.2.0",
-    "q": "^1.4.1",
-    "shelljs": "^0.5.3",
-    "xcode": "^0.8.5"
-  },
-  "devDependencies": {
-    "coffee-script": "^1.7.1",
-    "istanbul": "^0.4.2",
-    "jasmine-node": "~1",
-    "jshint": "^2.6.0",
-    "nodeunit": "^0.8.7",
-    "rewire": "^2.5.1",
-    "tmp": "^0.0.26",
-    "uncrustify": "^0.6.1"
-  },
-  "homepage": "https://github.com/vkiding/jud-html5#readme"
+  }
 }
