--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "jud"
   ],
   "author": {
-    "author": "vkiding",
+    "author": "vkiding"
   },
   "license": "GPL-3.0",
   "homepage": "",
